Fixed dark mode in article

--- a/assets/articles/styles/base.scss
+++ b/assets/articles/styles/base.scss
@@ -48,6 +48,10 @@ html, body {
 	}
 }
 
+.card * {
+	transition: all 1s ease ;
+}
+
 date {
 	display: block ;
 	font-size: 14px ;
